--- a/package.json
+++ b/package.json
@@ -1,39 +1,21 @@
 {
-  "_from": "zx-markdown-editor@^0.0.2",
-  "_id": "zx-markdown-editor@0.0.2",
-  "_inBundle": false,
-  "_integrity": "sha512-MYxbcEKlVI2gPvGyMdovJT4CnoLevDnUf6muq5xoH65qNKhlDmtg8wXFlZEbERLouPGLhLqCmGALUKpj+JUoqg==",
-  "_location": "/zx-markdown-editor",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "zx-markdown-editor@^0.0.2",
-    "name": "zx-markdown-editor",
-    "escapedName": "zx-markdown-editor",
-    "rawSpec": "^0.0.2",
-    "saveSpec": null,
-    "fetchSpec": "^0.0.2"
+  "name": "zx-markdown-editor",
+  "author": "chuzhixin <1204505056@qq.com>",
+  "version": "0.0.2",
+  "homepage": "https://chu1204505056.gitee.io/vue-admin-beautiful",
+  "main": "dist/zx-markdown-editor.umd.min.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chuzhixin/zx-markdown-editor"
   },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://mirrors.huaweicloud.com/repository/npm/zx-markdown-editor/-/zx-markdown-editor-0.0.2.tgz",
-  "_shasum": "49cafab5de5d765f9c2bf98fd10cc217e78a9418",
-  "_spec": "zx-markdown-editor@^0.0.2",
-  "_where": "/Users/zhuyilin/Documents/VipProject/vip-peixun-web/Manage",
-  "author": {
-    "name": "chuzhixin",
-    "email": "1204505056@qq.com"
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib src/components/export.js",
+    "lint": "vue-cli-service lint --fix",
+    "update": "ncu -u",
+    "push": "start ./deploy.sh"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "bugs": {
-    "url": "https://github.com/chuzhixin/zx-markdown-editor/issues"
-  },
-  "bundleDependencies": false,
   "dependencies": {
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
@@ -42,7 +24,6 @@
     "simplemde": "^1.11.2",
     "vue": "^2.6.11"
   },
-  "deprecated": false,
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "^4.4.6",
@@ -57,20 +38,8 @@
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
-  "homepage": "https://chu1204505056.gitee.io/vue-admin-beautiful",
-  "main": "dist/zx-markdown-editor.umd.min.js",
-  "name": "zx-markdown-editor",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chuzhixin/zx-markdown-editor.git"
-  },
-  "scripts": {
-    "build": "vue-cli-service build",
-    "build:lib": "vue-cli-service build --target lib src/components/export.js",
-    "lint": "vue-cli-service lint --fix",
-    "push": "start ./deploy.sh",
-    "serve": "vue-cli-service serve",
-    "update": "ncu -u"
-  },
-  "version": "0.0.2"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
